# minor

rob/: Robotics Assignment 2 Makar Riabcev.docx
rob/assignment2/: CMakeLists.txt  package.xml  pub_destination.sh
rob/assignment2/launch/: pointshoot.launch  servoing.launch
rob/assignment2/src/: pointshoot_node.cpp  servoing_node.cpp
rob/assignment2/world/: empty.world
vis/: Assignment 1 vision Makar Riabcev.docx  Assignment 2 Vision.docx
